--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,9 +9,8 @@
   <h3>Sign in to continue!</h3>
   <ion-form [formGroup]="loginForm" class="login-form">
     <ion-item>
-      <ion-input style="width: 60px; font-weight: bold;" type="text" formControlName="user" readonly="true"></ion-input>
-
-      <ion-input labelPlacement="stacked" placeholder="BH(number)" type="text" inputmode="email" autofocus="true"
+    
+      <ion-input labelPlacement="stacked" placeholder="username" type="text" inputmode="email" autofocus="true"
         formControlName="userName" required=""></ion-input>
     </ion-item>
     <ion-item>
