finally notification done

--- a/src/app/notification/notification.component.html
+++ b/src/app/notification/notification.component.html
@@ -1,18 +1,25 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button (click)="navigate()" default-href=""></ion-back-button>
+    </ion-buttons>
     <ion-title>Notification</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
-  <!-- This section is for displaying messages or alerts -->
-  <ion-list>
-    <ion-item >
-      <ion-label>
-        <!-- <h2>{{ notification.title }}</h2>
-        <p>{{ notification.body }}</p> -->
-      </ion-label>
-    </ion-item>
-  </ion-list>
+<ion-content id="main-content">
+  <ion-card  *ngFor="let item of user_info">
+    <ion-card-header>
+      <ion-card-title> {{ item.type }}</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      {{ item.subject }}
+    </ion-card-content>
+  
+    <ion-button fill="clear" color="success" (click)="acceptItem(item.from_user,item._user_tags)">Accept</ion-button>
+    <ion-button fill="clear" color="danger" (click)="rejectItem(item.from_user,item._user_tags)">Reject</ion-button>
+  </ion-card>
 </ion-content>
+
